SERVER-11586 Implement support for WriteCommands in benchRun and make it the default. WriteCommands are acknowledged, they don't require getLastError() calls and make the sync timing issues going away.