src/mongo/scripting/bench.cpp
@@ -36,6 +36,7 @@
 
 #include <boost/thread/thread.hpp>
 
+#include "mongo/db/namespace_string.h"
 #include "mongo/client/dbclientcursor.h"
 #include "mongo/scripting/bson_template_evaluator.h"
 #include "mongo/scripting/engine.h"
@@ -343,6 +344,9 @@ namespace mongo {
 
                 int delay = e["delay"].eoo() ? 0 : e["delay"].Int();
 
+                // Let's default to writeCmd == true.
+                bool useWriteCmd = e["writeCmd"].eoo() ? true : e["writeCmd"].Bool();
+
                 BSONObj context = e["context"].eoo() ? BSONObj() : e["context"].Obj();
 
                 auto_ptr<Scope> scope;
@@ -481,10 +485,30 @@ namespace mongo {
 
                         {
                             BenchRunEventTrace _bret(&_stats.updateCounter);
-                            conn->update( ns, fixQuery( query, bsonTemplateEvaluator ), update,
-                                          upsert , multi );
-                            if (safe)
-                                result = conn->getLastErrorDetailed();
+
+                            if (useWriteCmd) {
+                                // TODO: Replace after SERVER-11774.
+                                BSONObjBuilder builder;
+                                builder.append("update",
+                                    nsToCollectionSubstring(ns));
+                                BSONArrayBuilder docBuilder(
+                                    builder.subarrayStart("updates"));
+                                docBuilder.append(BSON("q" << query <<
+                                                       "u" << update <<
+                                                       "multi" << multi <<
+                                                       "upsert" << upsert));
+                                docBuilder.done();
+                                conn->runCommand(
+                                    nsToDatabaseSubstring(ns).toString(),
+                                    builder.obj(), result);
+                            }
+                            else {
+                                conn->update(ns, fixQuery(query,
+                                            bsonTemplateEvaluator), update,
+                                            upsert , multi);
+                                if (safe)
+                                    result = conn->getLastErrorDetailed();
+                            }
                         }
 
                         if( safe ){
@@ -509,11 +533,30 @@ namespace mongo {
                     else if( op == "insert" ) {
                         bool safe = e["safe"].trueValue();
                         BSONObj result;
+
                         {
                             BenchRunEventTrace _bret(&_stats.insertCounter);
-                            conn->insert( ns, fixQuery( e["doc"].Obj(), bsonTemplateEvaluator ) );
-                            if (safe)
-                                result = conn->getLastErrorDetailed();
+
+                            if (useWriteCmd) {
+                                // TODO: Replace after SERVER-11774.
+                                BSONObjBuilder builder;
+                                builder.append("insert",
+                                    nsToCollectionSubstring(ns));
+                                BSONArrayBuilder docBuilder(
+                                    builder.subarrayStart("documents"));
+                                docBuilder.append(fixQuery(e["doc"].Obj(),
+                                    bsonTemplateEvaluator));
+                                docBuilder.done();
+                                conn->runCommand(
+                                    nsToDatabaseSubstring(ns).toString(),
+                                    builder.obj(), result);
+                            }
+                            else {
+                                conn->insert(ns, fixQuery(e["doc"].Obj(),
+                                    bsonTemplateEvaluator));
+                                if (safe)
+                                    result = conn->getLastErrorDetailed();
+                            }
                         }
 
                         if( safe ){
@@ -544,9 +587,28 @@ namespace mongo {
 
                         {
                             BenchRunEventTrace _bret(&_stats.deleteCounter);
-                            conn->remove( ns, fixQuery( query, bsonTemplateEvaluator ), ! multi );
-                            if (safe)
-                                result = conn->getLastErrorDetailed();
+
+                            if (useWriteCmd) {
+                                // TODO: Replace after SERVER-11774.
+                                BSONObjBuilder builder;
+                                builder.append("delete",
+                                    nsToCollectionSubstring(ns));
+                                BSONArrayBuilder docBuilder(
+                                    builder.subarrayStart("deletes"));
+                                int limit = (multi == true) ? 0 : 1;
+                                docBuilder.append(BSON("q" << query <<
+                                                       "limit" << limit));
+                                docBuilder.done();
+                                conn->runCommand(
+                                    nsToDatabaseSubstring(ns).toString(),
+                                    builder.obj(), result);
+                            }
+                            else {
+                                conn->remove(ns, fixQuery(query,
+                                    bsonTemplateEvaluator), !multi);
+                                if (safe)
+                                    result = conn->getLastErrorDetailed();
+                            }
                         }
 
                         if( safe ){
@@ -614,7 +676,7 @@ namespace mongo {
                     _stats.errCount++;
                 }
 
-                if ( ++count % 100 == 0 ) {
+                if (++count % 100 == 0 && !useWriteCmd) {
                     conn->getLastError();
                 }
 
